# OB-tony

./: README.md  pyproject.toml
src/odoo_agent/: __init__.py  cli.py  config.py  intent.py  odoo_client.py  reminders.py  supabase_store.py
src/odoo_hr_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_reminders.py
