[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "odoo-hr-agent"
version = "0.1.0"
description = "Local CLI agent for HR-scoped Odoo operations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
odoo-hr-agent = "odoo_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
